Fri Mar 19 13:23:18 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * ace/OS_NS_Thread.cpp:

          Added a helper function for starting tasks on VxWorks.

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
        * bin/PerlACE/TestTarget_VxWorks.pm:

          Fixed a bug that was triggered with CreateProcess was called with
          only one argument.
          Also, set the correct relative path to the executable when it's not
          in the current directory.

Fri Mar 19 08:56:29 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux.GNU:
          Added support for archmodelflag

Thu Mar 18 10:40:29 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/NonBlocking_Conn_Test.cpp:
          Made logging a bit more verbose.

Wed Mar 17 20:00:45 UTC 2010  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_linux_common.GNU: Make the ARFLAGS
          setting overridable.

Wed Mar 17 14:24:20 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/Logging_Strategy.cpp:
        * ace/Logging_Strategy.h:
          Extended ACE_Logging_Strategy to allow safely change reactor
          used by this logging strategy.

Wed Mar 17 11:58:10 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        Committed the changes that I had to revert before x.7.7.

        * ace/Strategies_T.cpp:
          Changed the code so that close() is called in case of failure
          instead of destroy().

        * ace/Connector.cpp:
        * ace/Connector.h:
          Changed the fix for bug#3731. Now NBCH adds a reference in
          constructor and removes it in destructor if the SVC_HANDLER that
          it owns is reference counted. This is a cleaner solution than the
          one used before.

        * tests/NonBlocking_Conn_Test.h:
        * tests/Process_Strategy_Test.cpp:
        * tests/NonBlocking_Conn_Test.cpp: