@@ -1,3 +1,9 @@
+Fri Mar 19 15:58:52 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>
+
+        * tests/MT_NonBlocking_Connect_Test.cpp:
+          Fixed a test on Windows for WFMO reactor which doesn't support
+          work_pending() function.
+
 Fri Mar 19 13:23:18 UTC 2010  Adam Mitz  <mitza@ociweb.com>
 
         * ace/OS_NS_Thread.cpp:
